# kalshi-arbitrage-bot

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
src/: __init__.py  bot.py  cli.py  config.py  execution_engine.py  market_api.py  opportunity_analyzer.py
tests/: __init__.py  test_cost_calculator.py
